--- a/index.html
+++ b/index.html
@@ -138,7 +138,17 @@
                     <p>
                         A dedicated team of highly experienced professionals have enabled Rhea to sustain its success and dominate the fashion world for over three decades. We are one of the world's top model agencies, representing most successful faces.
                     </p>
-                    <img src="images/signature.png" alt="signature">
+                    <div class="fw-divider-space hidden-below-lg mt-65"></div>
+                    <div class="fw-theme-signature">
+                        <div class="fw-signature-left-part">
+                            <h4 class="section_header">Rebecca Smith</h4>
+                            <div class="desc">Casting Manager</div>
+                        </div>
+                        <div class="fw-signature-right-part">
+                            <img src="images/signature.png" alt="Rebecca Smith">
+                        </div>
+                    </div>
+                    <div class="fw-divider-space hidden-below-lg mt-65"></div>
                     <div class="fw-divider-space hidden-below-lg mt-65"></div>
                     <div class="fw-divider-space hidden-above-lg mt-30"></div>
                     <a href="#" class="btn btn-outline-maincolor">become a model</a>
