--- a/index.html
+++ b/index.html
@@ -944,15 +944,17 @@
                 <!--.col-* -->
                 <div class="fw-divider-space hidden-above-lg mt-20"></div>
                 <div class="col-lg-7 col-xl-8 animate" data-animation="scaleAppear">
-                    <form class="contact-form c-mb-20 c-gutter-20" method="post" action="http://webdesign-finder.com/">
+                    <form class="contact-form c-mb-20 c-gutter-20" method="post" action="#">
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-group">
+                                    <i class="fa fa-user" aria-hidden="true"></i>
                                     <input type="text" name="name" class="form-control" placeholder="full name">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
+                                    <i class="fa fa-envelope"></i>
                                     <input type="email" name="email" class="form-control" placeholder="email address">
                                 </div>
                             </div>
@@ -961,11 +963,13 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-group">
+                                    <i class="fa fa-phone" aria-hidden="true"></i>
                                     <input type="tel" name="phone" class="form-control" placeholder="phone number">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
+                                    <i class="fa fa-map-marker"></i>
                                     <input type="text" name="city" class="form-control" placeholder="your city">
                                 </div>
                             </div>
@@ -973,6 +977,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="form-group">
+                                    <i class="fa fa-comment"></i>
                                     <textarea rows="6" cols="45" name="message" class="form-control" placeholder="your message"></textarea>
                                     <button type="submit" class="btn-submit"><i class="fa fa-paper-plane"></i></button>
                                 </div>
