--- a/contact.html
+++ b/contact.html
@@ -126,12 +126,12 @@
                     </div>
                     <!-- .marker -->
                 </section>
-                <section class="top_mask_add background-contact s-py-70 s-pt-md-100 s-pb-md-95 s-pt-xl-150 s-pb-xl-185 c-gutter-30">
+                <section id="contacts" class="contacts-section top_mask_add ds overflow-visible background-contact s-pt-70 s-pb-60 s-pt-md-95 s-pb-md-80 s-pt-xl-170 s-pb-xl-140 c-gutter-30">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-5 col-xl-4 animate" data-animation="scaleAppear">
-                                <span class="color-main font-main fs-24 text-uppercase">modelia</span>
-                                <h2 class="mt-0 mb-40 text-uppercase">Contact us</h2>
+                                <span class="color-main fs-24 font-main text-uppercase">Rhea</span>
+                                <h2 class="mt-0 mb-40 contact-title text-uppercase">Contact us</h2>
                                 <div class="media mb-20">
                                     <h5 class="fs-20 mb-0 min-w-100">Phone:</h5>
                                     <div class="media-body ml-0 d-flex flex-column">
@@ -142,7 +142,7 @@
                                 <div class="media mb-20">
                                     <h5 class="fs-20 mb-0 min-w-100">Email:</h5>
                                     <div class="media-body ml-0 d-flex flex-column">
-                                        <span>modelia@example.com</span>
+                                        <span>Rhea@example.com</span>
                                     </div>
                                 </div>
                                 <div class="media mb-20">
@@ -155,15 +155,17 @@
                             <!--.col-* -->
                             <div class="fw-divider-space hidden-above-lg mt-20"></div>
                             <div class="col-lg-7 col-xl-8 animate" data-animation="scaleAppear">
-                                <form class="contact-form c-mb-20 c-gutter-20" method="post" action="http://webdesign-finder.com/">
+                                <form class="contact-form c-mb-20 c-gutter-20" method="post" action="#">
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <div class="form-group">
+                                                <i class="fa fa-user" aria-hidden="true"></i>
                                                 <input type="text" name="name" class="form-control" placeholder="full name">
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-group">
+                                                <i class="fa fa-envelope"></i>
                                                 <input type="email" name="email" class="form-control" placeholder="email address">
                                             </div>
                                         </div>
@@ -172,11 +174,13 @@
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <div class="form-group">
+                                                <i class="fa fa-phone" aria-hidden="true"></i>
                                                 <input type="tel" name="phone" class="form-control" placeholder="phone number">
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-group">
+                                                <i class="fa fa-map-marker"></i>
                                                 <input type="text" name="city" class="form-control" placeholder="your city">
                                             </div>
                                         </div>
@@ -184,6 +188,7 @@
                                     <div class="row">
                                         <div class="col-sm-12">
                                             <div class="form-group">
+                                                <i class="fa fa-comment"></i>
                                                 <textarea rows="6" cols="45" name="message" class="form-control" placeholder="your message"></textarea>
                                                 <button type="submit" class="btn-submit"><i class="fa fa-paper-plane"></i></button>
                                             </div>
