--- a/index.html
+++ b/index.html
@@ -94,8 +94,6 @@
 
                     <span><a href="#" class="fa fa-facebook"></a></span>
                     <span><a href="#" class="fa fa-twitter"></a></span>
-                    <span><a href="#" class="fa fa-google-plus"></a></span>
-                    <span><a href="#" class="fa fa-youtube-play"></a></span>
                     <span><a href="#" class="fa fa-instagram"></a></span>
                 </div>
                 <div class="container-fluid">
@@ -151,7 +149,7 @@
                     <div class="fw-divider-space hidden-below-lg mt-65"></div>
                     <div class="fw-divider-space hidden-below-lg mt-65"></div>
                     <div class="fw-divider-space hidden-above-lg mt-30"></div>
-                    <a href="#" class="btn btn-outline-maincolor">become a model</a>
+
                     <a href="#" class="btn btn-maincolor">Schedule Casting</a>
                 </div>
             </div>
@@ -164,15 +162,15 @@
     <section id="gallery" class="gallery-section gallery-6 bottom_mask_add overflow-visible ds s-pt-115 s-pb-70 s-pb-md-80 s-pt-md-135 s-pb-xl-155 s-pt-xl-205">
         <div class="container-fluid">
             <div class="row">
-                <div class="fw-divider-space hidden-below-xl pt-70"></div>
+
                 <div class="col-lg-12">
                     <div class="row justify-content-center">
                         <div class="col-md-10 col-xl-8">
                             <div class="filters gallery-filters text-lg-right">
-                                <a href="#" data-filter="*" class="active selected">All</a>
-                                <a href="#" data-filter=".fashion">fashion</a>
-                                <a href="#" data-filter=".studio">studio</a>
-                                <a href="#" data-filter=".session">session</a>
+                                <a href="#" data-filter="*" class="active selected">Ethnic</a>
+                                <a href="#" data-filter=".fashion">Western</a>
+                                <a href="#" data-filter=".studio">No Makeup</a>
+                                <a href="#" data-filter=".session">Videos</a>
                             </div>
                         </div>
                     </div>
@@ -905,15 +903,7 @@
 
 
 
-    <section id="map" class="ds ms page_map top_mask_subtract" data-draggable="false" data-scrollwheel="false">
-        <div class="marker">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d447986.85314507934!2d76.81114782878736!3d28.692718881323874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d047309fff32f%3A0xfc5606ed1b5d46c3!2sDelhi!5e0!3m2!1sen!2sin!4v1638521561947!5m2!1sen!2sin"
-                width="1920px" height="737px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-            <img class="marker-icon" src="images/map_marker_icon.png" alt="img">
-        </div>
-        <!-- .marker -->
-    </section>
 
     <section id="contacts" class="contacts-section top_mask_add ds overflow-visible background-contact s-pt-70 s-pb-60 s-pt-md-95 s-pb-md-80 s-pt-xl-170 s-pb-xl-140 c-gutter-30">
         <div class="container">
@@ -1004,8 +994,6 @@
 
                         <span><a href="#" class="fa fa-facebook"></a></span>
                         <span><a href="#" class="fa fa-twitter"></a></span>
-                        <span><a href="#" class="fa fa-google-plus"></a></span>
-                        <span><a href="#" class="fa fa-youtube-play"></a></span>
                         <span><a href="#" class="fa fa-instagram"></a></span>
                     </div>
 
@@ -1013,9 +1001,7 @@
                         <img src="images/logo.png" alt="img">
                     </div>
 
-                    <div class="widget copyright">
-                        <p><a target="_blank" href="#">Rhea-Model Agency</a></p>
-                    </div>
+
                 </div>
 
             </div>
