--- a/contact.html
+++ b/contact.html
@@ -74,29 +74,60 @@
 
             <!-- template sections -->
 
+            <div class="header_absolute">
+                <header class="page_header page_header_side vertical_menu_header ds bottom_mask_add">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12 my-0 mx-0 d-flex justify-content-between align-items-center">
+                                <a href="index.html" class="logo">
+                                    <img src="images/logo.png" alt="img">
+                                </a>
 
-            <div class=" navbar page_header page_header_side vertical_menu_header ds bottom_mask_add ">
-                <a href="index.html">
-                    <img src="images/logo.png" class="logo">
-                </a>
+                                <span class="header-soc">
+                                
+                                <span class="toggle_menu toggle_menu_side header-slide toggle_menu_special"><span></span></span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="side_header_inner ds">
+                        <div class="scrollbar-macosx">
+                            <div class="header-side-menu text-left">
+                                <div class="container-fluid c-gutter-0">
+                                    <div class="row">
+                                        <div class="col-12 ">
+                                            <div class="menu-part menu-side-click">
+                                                <!-- main side nav start -->
+                                                <nav class="mainmenu_side_wrapper">
+                                                    <ul class="nav menu-click">
+
+                                                        <li class="active">
+                                                            <a href="Portfolio.html">Portfolio</a>
+
+                                                        </li>
+
+                                                        <!-- blog -->
+                                                        <li>
+                                                            <a href="contact.html">Contact</a>
+
+                                                        </li>
 
 
-                <nav>
-                    <ul id="menuList">
-                        <li>
-                            <a href="Pagent.html">Pagent</a></li>
-                        <li>
-                            <a href="Portfolio.html">Portfolio</a></li>
-                        <li>
-                            <a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-                <div class="menu-icon" onclick="togglemenu()"><i class="fa fa-bars" aria-hidden="true"></i>
-                </div>
+                                                        <!-- eof contacts -->
+                                                    </ul>
+                                                </nav>
+                                                <!-- eof main side nav -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
 
 
             </div>
-
             <section class="page_title s-parallax bottom_mask_subtract s-overlay ds title-overlay s-py-md-25">
                 <div class="container">
                     <div class="row">
