--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
                         <div class="row justify-content-center">
                             <div class="col-md-10 col-xl-8">
                                 <div class="filters gallery-filters text-lg-right">
-                                    <a href="#" data-filter="*" class="active selected">Ethnic</a>
+                                    <a href="#" data-filter="*" class="active selected">All</a>
+                                    <a href="#" data-filter=".ethnic">Ethnic</a>
                                     <a href="#" data-filter=".fashion">Western</a>
                                     <a href="#" data-filter=".studio">No Makeup</a>
                                     <a href="#" data-filter=".session">Videos</a>
@@ -266,7 +267,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-6 col-lg-4 col-lgx-3 col-xl-2 studio session">
+                            <div class="col-sm-6 col-lg-4 col-lgx-3 col-xl-2 studio session ethnic">
                                 <div class="vertical-item item-gallery content-absolute text-center ds">
                                     <a href="#" class="item-media h-100 w-100 d-block">
                                         <img src="images/gallery/model_2.jpg" alt="img">
@@ -323,7 +324,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-6 col-lg-4 col-lgx-3 col-xl-2 fashion session">
+                            <div class="col-sm-6 col-lg-4 col-lgx-3 col-xl-2 fashion session ethnic">
                                 <div class="vertical-item item-gallery content-absolute text-center ds">
                                     <a href="#" class="item-media h-100 w-100 d-block">
                                         <img src="images/gallery/model_3.jpg" alt="img">
@@ -382,7 +383,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-6 col-lg-4 col-lgx-3 col-xl-2 studio">
+                            <div class="col-sm-6 col-lg-4 col-lgx-3 col-xl-2 studio ethnic">
                                 <div class="vertical-item item-gallery content-absolute text-center ds">
                                     <a href="#" class="item-media h-100 w-100 d-block">
                                         <img src="images/gallery/model_4.jpg" alt="img">
@@ -500,7 +501,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-6 col-lg-4 col-lgx-3 col-xl-2 studio session">
+                            <div class="col-sm-6 col-lg-4 col-lgx-3 col-xl-2 studio session ethnic">
                                 <div class="vertical-item item-gallery content-absolute text-center ds">
                                     <a href="#" class="item-media h-100 w-100 d-block">
                                         <img src="images/gallery/model_6.jpg" alt="img">
