--- a/Portfolio.html
+++ b/Portfolio.html
@@ -127,9 +127,9 @@
                         </div>
 
                     </div>
-
-
+                </header>
             </div>
+
 
             <section class="page_title s-parallax bottom_mask_subtract s-overlay ds title-overlay s-py-md-25 ">
                 <div class="container ">
@@ -159,7 +159,8 @@
                             <div class="row justify-content-center ">
                                 <div class="col-md-10 col-xl-8 ">
                                     <div class="filters gallery-filters text-lg-right ">
-                                        <a href="# " data-filter="* " class="active selected ">Ethnic</a>
+                                        <a href="# " data-filter="* " class="active selected ">All</a>
+                                        <a href="# " data-filter=".Ethnic ">Ethnic</a>
                                         <a href="# " data-filter=".fashion ">Western</a>
                                         <a href="# " data-filter=".studio ">No Makeup</a>
                                         <a href="# " data-filter=".session ">Videos</a>
@@ -169,7 +170,7 @@
 
                             <div class="row isotope-wrapper masonry-layout c-mb-30 " data-filters=".gallery-filters ">
 
-                                <div class="col-xl-4 col-sm-6 fashion ">
+                                <div class="col-xl-4 col-sm-6 fashion Ethnic ">
                                     <div class="vertical-item item-gallery text-center ds ">
                                         <div class="item-media h-100 w-100 d-block ">
                                             <img src="images/gallery/model_1.jpg " alt="img ">
@@ -213,7 +214,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-xl-4 col-sm-6 fashion ">
+                                <div class="col-xl-4 col-sm-6 fashion Ethnic">
                                     <div class="vertical-item item-gallery text-center ds ">
                                         <div class="item-media h-100 w-100 d-block ">
                                             <img src="images/gallery/model_5.jpg " alt="img ">
@@ -246,7 +247,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-xl-4 col-sm-6 studio session ">
+                                <div class="col-xl-4 col-sm-6 studio session Ethnic ">
                                     <div class="vertical-item item-gallery text-center ds ">
                                         <div class="item-media h-100 w-100 d-block ">
                                             <img src="images/gallery/model_8.jpg " alt="img ">
@@ -268,7 +269,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-xl-4 col-sm-6 fashion session ">
+                                <div class="col-xl-4 col-sm-6 fashion session Ethnic">
                                     <div class="vertical-item item-gallery text-center ds ">
                                         <div class="item-media h-100 w-100 d-block ">
                                             <img src="images/gallery/model_10.jpg " alt="img ">
