--- a/contact.html
+++ b/contact.html
@@ -125,9 +125,9 @@
                         </div>
 
                     </div>
-
-
+                </header>
             </div>
+
             <section class="page_title s-parallax bottom_mask_subtract s-overlay ds title-overlay s-py-md-25">
                 <div class="container">
                     <div class="row">
@@ -147,93 +147,83 @@
                 </div>
             </section>
 
-            <section class="ds">
-                <section id="map" class="ds ms page_map top_mask_subtract" data-draggable="false" data-scrollwheel="false">
-                    <div class="marker">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d447986.85314507934!2d76.81114782878736!3d28.692718881323874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d047309fff32f%3A0xfc5606ed1b5d46c3!2sDelhi!5e0!3m2!1sen!2sin!4v1638521561947!5m2!1sen!2sin"
-                            width="1920px" height="737px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
-                        <img class="marker-icon" src="images/map_marker_icon.png" alt="img">
-                    </div>
-                    <!-- .marker -->
-                </section>
-                <section id="contacts" class="contacts-section top_mask_add ds overflow-visible background-contact s-pt-70 s-pb-60 s-pt-md-95 s-pb-md-80 s-pt-xl-170 s-pb-xl-140 c-gutter-30">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-5 col-xl-4 animate" data-animation="scaleAppear">
-                                <span class="color-main fs-24 font-main text-uppercase">Rhea</span>
-                                <h2 class="mt-0 mb-40 contact-title text-uppercase">Contact us</h2>
-                                <div class="media mb-20">
-                                    <h5 class="fs-20 mb-0 min-w-100">Phone:</h5>
-                                    <div class="media-body ml-0 d-flex flex-column">
-                                        <span>(800) 123-45-67</span>
-                                        <span>(800) 123-45-68</span>
-                                    </div>
-                                </div>
-                                <div class="media mb-20">
-                                    <h5 class="fs-20 mb-0 min-w-100">Email:</h5>
-                                    <div class="media-body ml-0 d-flex flex-column">
-                                        <span>Rhea@example.com</span>
-                                    </div>
-                                </div>
-                                <div class="media mb-20">
-                                    <h5 class="fs-20 mb-0 min-w-100">Address:</h5>
-                                    <div class="media-body pr-lg-4 ml-0 d-flex flex-column">
-                                        <span>316 Tipple Road Philadelphia, PA 19143</span>
-                                    </div>
+            <section id="contacts" class="contacts-section top_mask_add ds overflow-visible background-contact s-pt-70 s-pb-60 s-pt-md-95 s-pb-md-80 s-pt-xl-170 s-pb-xl-140 c-gutter-30">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5 col-xl-4 animate" data-animation="scaleAppear">
+                            <span class="color-main fs-24 font-main text-uppercase">Rhea</span>
+                            <h2 class="mt-0 mb-40 contact-title text-uppercase">Contact us</h2>
+                            <div class="media mb-20">
+                                <h5 class="fs-20 mb-0 min-w-100">Phone:</h5>
+                                <div class="media-body ml-0 d-flex flex-column">
+                                    <span>(800) 123-45-67</span>
+                                    <span>(800) 123-45-68</span>
                                 </div>
                             </div>
-                            <!--.col-* -->
-                            <div class="fw-divider-space hidden-above-lg mt-20"></div>
-                            <div class="col-lg-7 col-xl-8 animate" data-animation="scaleAppear">
-                                <form class="contact-form c-mb-20 c-gutter-20" method="post" action="#">
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <i class="fa fa-user" aria-hidden="true"></i>
-                                                <input type="text" name="name" class="form-control" placeholder="full name">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <i class="fa fa-envelope"></i>
-                                                <input type="email" name="email" class="form-control" placeholder="email address">
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <i class="fa fa-phone" aria-hidden="true"></i>
-                                                <input type="tel" name="phone" class="form-control" placeholder="phone number">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <i class="fa fa-map-marker"></i>
-                                                <input type="text" name="city" class="form-control" placeholder="your city">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <div class="form-group">
-                                                <i class="fa fa-comment"></i>
-                                                <textarea rows="6" cols="45" name="message" class="form-control" placeholder="your message"></textarea>
-                                                <button type="submit" class="btn-submit"><i class="fa fa-paper-plane"></i></button>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </form>
+                            <div class="media mb-20">
+                                <h5 class="fs-20 mb-0 min-w-100">Email:</h5>
+                                <div class="media-body ml-0 d-flex flex-column">
+                                    <span>Rhea@example.com</span>
+                                </div>
                             </div>
-                            <!--.col-* -->
+                            <div class="media mb-20">
+                                <h5 class="fs-20 mb-0 min-w-100">Address:</h5>
+                                <div class="media-body pr-lg-4 ml-0 d-flex flex-column">
+                                    <span>316 Tipple Road Philadelphia, PA 19143</span>
+                                </div>
+                            </div>
                         </div>
+                        <!--.col-* -->
+                        <div class="fw-divider-space hidden-above-lg mt-20"></div>
+                        <div class="col-lg-7 col-xl-8 animate" data-animation="scaleAppear">
+                            <form class="contact-form c-mb-20 c-gutter-20" method="post" action="#">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <i class="fa fa-user" aria-hidden="true"></i>
+                                            <input type="text" name="name" class="form-control" placeholder="full name">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <i class="fa fa-envelope"></i>
+                                            <input type="email" name="email" class="form-control" placeholder="email address">
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <i class="fa fa-phone" aria-hidden="true"></i>
+                                            <input type="tel" name="phone" class="form-control" placeholder="phone number">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <i class="fa fa-map-marker"></i>
+                                            <input type="text" name="city" class="form-control" placeholder="your city">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <i class="fa fa-comment"></i>
+                                            <textarea rows="6" cols="45" name="message" class="form-control" placeholder="your message"></textarea>
+                                            <button type="submit" class="btn-submit"><i class="fa fa-paper-plane"></i></button>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </form>
+                        </div>
+                        <!--.col-* -->
                     </div>
-                </section>
-                <div class="fw-divider-space hidden-below-lg mt-50"></div>
-                <div class="fw-divider-space hidden-xs hidden-above-lg mt-20"></div>
+                </div>
+            </section>
+            <div class="fw-divider-space hidden-below-lg mt-50"></div>
+            <div class="fw-divider-space hidden-xs hidden-above-lg mt-20"></div>
             </section>
 
             <footer class="page_footer ds top_mask_add s-pb-10 s-pt-70 s-pb-md-40 s-pt-md-85 s-pb-xl-140 s-pt-xl-145">
@@ -246,8 +236,6 @@
                             <div class="soc-buttons bottom_soc">
 
                                 <span><a href="#" class="fa fa-facebook"></a></span>
-                                <span><a href="#" class="fa fa-twitter"></a></span>
-                                <span><a href="#" class="fa fa-google-plus"></a></span>
                                 <span><a href="#" class="fa fa-youtube-play"></a></span>
                                 <span><a href="#" class="fa fa-instagram"></a></span>
                             </div>
