--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <div class="fw-divider-space hidden-below-lg mt-65"></div>
                             <div class="fw-divider-space hidden-above-lg mt-30"></div>
 
-                            <a href="#" class="btn btn-maincolor">Schedule Casting</a>
+                            <a href="#" class="btn ">Schedule Casting</a>
                         </div>
                     </div>
                     <div class="fw-divider-space hidden-below-lg mt-30"></div>
@@ -917,7 +917,7 @@
                             <div class="row">
                                 <div class="fw-divider-space pt-20 hidden-above-lg"></div>
                                 <div class="col-12 text-center">
-                                    <div class="btn btn-maincolor">all models</div>
+                                    <div class="btn">all models</div>
                                 </div>
                             </div>
                         </div>
