--- a/Portfolio.html
+++ b/Portfolio.html
@@ -352,7 +352,7 @@
                             <div class="row ">
                                 <div class="fw-divider-space mt-20 "></div>
                                 <div class="col-sm-12 text-center ">
-                                    <a href="# " class="btn btn-maincolor ">Load More</a>
+                                    <a href="# " class="btn">Load More</a>
                                 </div>
                             </div>
 
